apps/web-test-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web-2
  namespace: webtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-web-2
  template:
    metadata:
      labels:
        app: nginx-web-2
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
