apps/web-test-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-2
  namespace: webtest
spec:
  selector:
    app: nginx-web-2
  ports:
    - port: 80
      targetPort: 80
